---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
expression: yaml
---
- fields:
    attributes: "{\"http.request.method\": \"POST\", \"http.request.headers\": \"{\\\"x-log-request\\\": \\\"log\\\", \\\"content-type\\\": \\\"application/json\\\"}\", \"http.request.version\": \"HTTP/1.1\", \"http.request.body\": \"{\\\"query\\\":\\\"query { foo }\\\"}\", \"http.request.uri\": \"http://default/\"}"
    kind: supergraph.request
  level: INFO
  message: ""
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
- fields:
    attributes: "{}"
    kind: my.request.event
  level: INFO
  message: my event message
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
- fields:
    attributes: "{}"
    kind: my.response_event
  level: WARN
  message: my response event message
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
